Measure loop basic implementation - need to move to separate class

--- a/P_SCAAT.csproj
+++ b/P_SCAAT.csproj
@@ -213,5 +213,8 @@
   <ItemGroup>
     <Resource Include="PSCAAT.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Measurment\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
