--- a/P_SCAAT.csproj
+++ b/P_SCAAT.csproj
@@ -187,6 +187,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="UMLClassDiagram.cd" />
     <None Include="OscilloscopeCommandLists\active.json" />
     <None Include="OscilloscopeCommandLists\default.json" />
     <None Include="packages.config" />
